[package]
name = "corax"
version = "0.1.0"
authors = ["aether-fiducia <aethersaunders@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.serenity]
version = "0.8.0"
features = ["cache", "framework", "standard_framework", "voice"]
